CHANGES-1.2.txt
---------------

CHANGES IN CUPS V1.2.6

	- The network backends now log the numeric address that
	  is being used (STR #2046)
	- Fixed a compile error when using libpaper.
	- Fixed a compile error when compiling on Solaris with
	  threading enabled (STR #2049, STR #2050)
	- Missing printer-state-changed event for
	  printer-state-message updates (STR #2047)


CHANGES IN CUPS V1.2.5

	- Documentation updates (STR #2038)
	- The SNMP backend no longer uses IPP for Epson printers
	  (STR #2028)
	- Updated the configure script for Tru64 UNIX 5.1 (STR
	  #2033)
	- Tru64 5.1B's getaddrinfo() and getnameinfo() functions
	  leak file descriptors (STR #2034)
	- cupsAddDest() didn't add the parent destination's
	  options and attributes.
	- ppdConflicts() did not handle custom option
	  constraints.
	- Raw printing of gzip'd files did not work (STR #2009)
	- The scheduler no longer preserves default option
	  choices when the new PPD no longer provides the old
	  default choice (STR #1929)
	- The Linux SCSI backend is now only built if the SCSI
	  development headers are installed.
	- USB printing to Minolta printers did not work (STR
	  #2019)
	- Windows clients could not monitor the queue status (STR
	  #2006)
	- The scheduler didn't log the operation name in the
	  access_log file for Create-Job and Print-Job requests.
	- The PostScript filter now separates collated copies
	  with any required JCL commands so that JCL-based
	  finishing options act on the individual copies and not
	  all of the copies as a single document.
	- The PostScript filter now disables duplex printing when
	  printing a 1-page document.
	- cups-lpd didn't pass the correct
	  job-originating-host-name value (STR #2023)
	- Fixed some speling errors in the German message catalog
	  (STR #2012)
	- cupstestppd did not catch PPD files with bad
	  UIConstraints values (STR #2016)
	- The USB backend did not work with the current udev-